<resources>
    <string name="app_name">SuitETECSA</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hola</string>
    <string name="nav_header_subtitle">Bienvenid@ a SuitETECSA</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Nauta</string>
    <string name="menu_slideshow">Acerca de...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_info">Inicie sesión con su cuenta de Mi Cubacel.</string>
    <string name="phone_number">Número de teléfono</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidó su contraseña?</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="sign_up_large">¿No tiene cuenta? Registrese</string>
    <string name="text_continue">Continuar</string>
    <string name="email_address">Correo eletrónico</string>
    <string name="last_name">Apellidos</string>
    <string name="first_name">Nombre</string>
    <string name="code_info">Cubacel le enviará un código de cuatro digitos</string>
    <string name="code">Código</string>
    <string name="create_password">Cree una contraseña para su cuenta</string>
    <string name="repeat_password">Repetir Contraseña</string>
    <string name="to_finish">Finalizar</string>
    <string name="reset_password">Restablesca su Contraseña</string>
    <string name="new_password">Nueva Contraseña</string>
    <string name="message">Message</string>
    <string name="create_mi_cubacel_account">Cree Una Cuenta en Mi Cubacel</string>
    <string name="cd_expire_date">Fecha en la que expira</string>
    <string name="buy">Comprar</string>
    <string name="most_info">más info</string>
    <string name="description">Descripcion</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="captcha_code">Codigo CAPTCHA</string>
    <string name="accept">Aceptar</string>
    <string name="accept_tou">Acepto</string>
    <string name="the_terms_of_use">los terminos de uso</string>
    <string name="information">Informacion</string>
</resources>
