<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_account">

    <fragment
        android:id="@+id/nav_account"
        android:name="cu.marilasoft.suitetecsa.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_nauta"
        android:name="cu.marilasoft.suitetecsa.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_nauta" />

    <fragment
        android:id="@+id/nav_about"
        android:name="cu.marilasoft.suitetecsa.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_about" />

</navigation>